# aetherion

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.openvdb  Doxyfile  Makefile  ManylinuxDockerfile  PROGRAM_MANAGER_REFACTOR.md  README.md  coverage.xml  environment.yml  lifesimcore.pyi  pyproject.toml  pyrightconfig.json  vcpkg-configuration.json  vcpkg-lock.json  vcpkg.json
aetherion/: AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Makefile  README.md  dev-requirements.txt  environment.yml  lifesimcore.pyi  pyproject.toml  pytest.ini  test.py
aetherion/docs/: AETHERION_FILE_SYSTEM.md  Vision_Draft.md
aetherion/docs/.doctrees/: environment.pickle  index.doctree
aetherion/docs/source/: conf.py  index.rst
aetherion/docs/topics/ai_brains_framework/: genome.html
aetherion/docs/topics/getting_started/: faq.html  index.html
aetherion/docs/topics/physics_and_ecosystem/: architecture.html  concurrency.html  index.html  performance.html
aetherion/docs/topics/user_guide/: index.html
aetherion/openvdb-deb/DEBIAN/: control
aetherion/recipe/: meta.yaml
aetherion/schemas/: EntityTypeComponent.fbs  PerceptionResponse.fbs  PhysicsComponents.fbs  VoxelGridView.fbs
aetherion/scripts/: build_and_install.sh
aetherion/src/: CameraUtils.cpp  CameraUtils.hpp  CombatSystem.cpp  CombatSystem.hpp  ECOSYSTEM_PHYSICS_REFACTOR.md  EcosystemEngine.cpp  EcosystemEngine.hpp  EffectsSystem.hpp  EntityInterface.hpp  FlatbufferUtils.cpp  GameDB.cpp  GameDB.hpp  GameDBHandler.cpp  HealthSystem.hpp  ItemConfigurationManager.cpp  ItemConfigurationManager.hpp  ItemsEvents.hpp  LifeEvents.cpp  LifeEvents.hpp  Logger.cpp  MetabolismSystem.cpp  MetabolismSystem.hpp  MoveEntityEvent.hpp  PerceptionResponse.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsEvents.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsSettings.cpp  PhysicsSettings.hpp  PyRegistry.hpp  QueryCommand.cpp  QueryResponse.cpp  QueryResponse.hpp  SunIntensity.hpp  VoxelGrid.cpp  VoxelGrid.hpp  WavePhysicsEngine.cpp  WavePhysicsEngine.hpp  (+10 more)
aetherion/src/Gui/: AllGuiPrograms.hpp  CMakeLists.txt  Gui.cpp  Gui.hpp  GuiStateManager.cpp  GuiStateManager.hpp  ItemWindow.cpp  ItemWindow.hpp  README_GUI_REFACTOR.md
aetherion/src/Gui/GuiCore/: BasicProgram.hpp  GuiContext.hpp  GuiProgram.hpp  (+4 more)
aetherion/src/LowLevelRenderer/: CMakeLists.txt  FontManager.hpp  RenderQueue.hpp  SceneComponents.hpp  SceneGraph.hpp  TextureManager.cpp  TextureManager.hpp
aetherion/src/WorldClientAPI/: CommandConstants.hpp  CommandValidator.cpp  CommandValidator.hpp  PerceptionCore.cpp  PerceptionCore.hpp  ProcessOptionalQueries.cpp  TerrainVisibility.cpp
aetherion/src/aetherion/: __init__.py  entities.py  game.py  resource_manager.py  scheduler.py
aetherion/src/components/: CMakeLists.txt  CombatComponents.hpp  ConsoleLogsComponent.hpp  DnaComponents.hpp  EntityTypeComponent.hpp  HealthComponents.hpp  ItemsComponents.cpp  LifecycleComponents.hpp  MetabolismComponents.cpp  MovingComponent.hpp  TerrainComponents.hpp
aetherion/src/ecosystem/: EcosystemEvents.hpp  ReadonlyQueries.hpp
aetherion/src/neat/: CMakeLists.txt  config.hpp
aetherion/src/physics/: CMakeLists.txt  Collision.hpp  ComponentMutators.cpp  ComponentMutators.hpp  PhysicalMath.cpp  PhysicalMath.hpp  PhysicsEvents.hpp  PhysicsExceptions.hpp  PhysicsMutators.hpp  PhysicsUtils.hpp  PhysicsValidators.hpp  ReadonlyQueries.cpp  ReadonlyQueries.hpp
aetherion/src/terrain/: TerrainGridRepository.cpp  TerrainGridRepository.hpp  TerrainStorage.cpp  TerrainStorage.hpp  VoxelCoord.hpp
aetherion/src/voxelgrid/: GridData.hpp  VoxelGrid.cpp  VoxelGrid.hpp  VoxelGridView.hpp
aetherion/tests/: test_entityinterface.py  test_perceptionresponse.py  test_terrain_storage.py  test_voxelgrid.py  test_voxelgridview.py  test_world.py  test_world_terrain.py  test_worldview.py
aetherion/tests/cpp/: CMakeLists.txt
aetherion/webclient/: README.md  package.json  tsconfig.json
aetherion/webclient/src/: aetherion.ts  codecs.ts  perception-response-flatb.ts  voxel-grid-view-flatb.ts  world-view.ts
aetherion/webclient/wasm/: aetherion_embind.cpp  build.sh
src/Camera/: CMakeLists.txt  DimetricTileWalker.cpp  DimetricTileWalker.hpp  DrawTerrain.cpp  DrawTerrain.hpp  Utils.cpp  Utils.hpp
src/Gui/: CMakeLists.txt  Gui.cpp  Gui.hpp  GuiStateManager.cpp  GuiStateManager.hpp  ItemWindow.cpp  ItemWindow.hpp
src/Gui/GuiCore/: BasicProgram.hpp  GuiProgram.hpp  GuiProgramManager.hpp  ProgramManager.hpp  TerminalProgram.hpp  TerminalProgramManager.hpp
src/Gui/TerminalPrograms/: ClearCommand.cpp  ClearCommand.hpp  GetEntityCommand.cpp  GetEntityCommand.hpp  GetTerrainCommand.cpp  GetTerrainCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  HistoryCommand.cpp  HistoryCommand.hpp  QueueCommand.cpp  QueueCommand.hpp  TerminalCommand.cpp  TerminalCommand.hpp
src/Gui/Windows/: 3DVoxelViewportWindows.cpp  CharacterFormWindows.cpp  CharacterListWindows.cpp  WorldFormWindows.cpp  WorldListWindows.cpp  WorldServerFormWindows.cpp  WorldTypeForm.cpp
src/LowLevelRenderer/: CMakeLists.txt  FontManager.hpp  RenderQueue.hpp  SceneComponents.hpp  SceneGraph.hpp  TextureManager.cpp  TextureManager.hpp
src/WorldClientAPI/: CMakeLists.txt  CommandConstants.hpp  CommandHandlers.cpp  CommandHandlers.hpp  CommandValidator.cpp  CommandValidator.hpp  PerceptionCore.hpp  ProcessOptionalQueries.cpp  ProcessOptionalQueries.hpp  ResponseSerializer.cpp  ResponseSerializer.hpp  TerrainVisibility.hpp
src/diag/: CMakeLists.txt  Diag.cpp  Diag.hpp  Sink.hpp  ThrottledLog.hpp  TracyMemory.cpp
src/ecosystem/: CMakeLists.txt  EcosystemEvents.hpp  ReadonlyQueries.hpp
src/items/: CMakeLists.txt  ItemConfiguration.cpp  ItemConfiguration.hpp  ItemConfigurationManager.cpp  ItemConfigurationManager.hpp
src/terrain/: CMakeLists.txt  TerrainGridLock.hpp  TerrainGridRepository.cpp  TerrainGridRepository.hpp  TerrainStorage.cpp  TerrainStorage.hpp  VoxelCoord.hpp
src/voxelgrid/: CMakeLists.txt  GridData.hpp  VoxelGrid.cpp  VoxelGrid.hpp  VoxelGridView.hpp
(+1034 files in other folders)
