[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=2.7.0",
    "numpy>=2.2.4",
]

build-backend = "scikit_build_core.build"

[project]
name = "aetherion"
version = "0.3.0"
description = "Isometric tile-based sandbox engine for narrative RPGs and emergent roguelikes."
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Arthur Moreno", email = "morenorarthur@gmail.com" }
]
dependencies = [
  "jwt>=1.4.0",
  "lz4>=4.4.5",
  "msgpack>=1.1.2",
  "pydantic>=2.12.5",
  "PySDL2>=0.9.17",
  "structlog>=25.5.0",
  "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/arthurmoreno/aetherion"

[tool.scikit-build]
build.verbose = false
cmake.args = [
  "-G", "Ninja",
  "-DPython3_FIND_DEBUG_MODE=3",
  "-DCMAKE_CXX_FLAGS=-fdiagnostics-color=always",
  "-DBUILD_WORLD_TEST=OFF",
]
# properly includes cmake files and your libs folder in the sdist
sdist.include = [
  "LICENSE",
  "libs/entt",
  "libs/flatbuffers",
  "libs/imgui",
  "libs/imdb++",
  "libs/nanobind",
  "libs/neat",
  "libs/ylt",
]
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.setuptools.packages.find]
where = ["."]
include = ["aetherion"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# This tells setuptools to include the header file from the install tree
aetherion = [  
  "*.pyi",      # your generated stub
  "py.typed",   # PEP 561 marker
  "include/aetherion/aetherion.hpp"
]
"" = ["*.hpp", "*.h"]

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git/**",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "aetherion/**",
    "libs/**",
    "aetherion.pyi",
]

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

# Exclude directories and files:
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "libs/**",
    "lifesimcore.pyi",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "uv>=0.10.4",
]
