[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=2.7.0",
    "numpy>=2.2.4",
]

build-backend = "scikit_build_core.build"

[project]
name = "aetherion"
version = "0.1.0"
description = "Life Simulation Core module built with nanobind"
requires-python = ">=3.12"
authors = [
    { name = "Arthur Moreno", email = "morenorarthur@gmail.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/aetherion"

[tool.scikit-build]
cmake.verbose = true
cmake.args = [
  "-G", "Ninja",
  "-DPython3_FIND_DEBUG_MODE=3",
  "-DCMAKE_CXX_FLAGS=-fdiagnostics-color=always",
  "-DBUILD_WORLD_TEST=OFF",
  # allow an override via env, fallback to your default PREFIX_PATH
  "-DCMAKE_PREFIX_PATH=${PREFIX_PATH:-/home/arthur/anaconda3/envs/lifesimcore-312}"
]
cmake.build-type = "Debug"

build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.setuptools.packages.find]
where = ["."]
include = ["lifesimcore"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# This tells setuptools to include the header file from the install tree
aetherion = ["include/aetherion/aetherion.hpp"]
"" = ["*.hpp", "*.h"]